--- a/bin/index.html
+++ b/bin/index.html
@@ -12,37 +12,74 @@
     <!--pace.js-->
     <script data-pace-options='{ "ajax": false }' src="https://cdn.bootcss.com/pace/1.0.2/pace.min.js"></script>
     <link rel="stylesheet" href="https://cdn.bootcss.com/pace/1.0.2/themes/black/pace-theme-loading-bar.min.css" type="text/css" media="all" />
+
+    <style>
+        .achievement{
+            margin: 0.4em;
+            background-color: lightgrey;
+        }
+        .mdl-badge[data-badge]:after {
+            top: 0.5em;
+            right: 0.5em;
+        }
+        .mdl-badge {
+            margin-right: inherit;
+        }
+    </style>
 </head>
 <body>
-    <div id="app" style="margin-top: 10em; width: 400px; margin-left: auto; margin-right: auto">
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="search-bar">
-            <label class="mdl-textfield__label" for="sample3">搜索...</label>
+    <div id="app" class="mdl-grid" style="margin-top: 10em; max-width: 1500px; margin-left: auto; margin-right: auto">
+        <div class="mdl-cell mdl-cell--5-col" >
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input class="mdl-textfield__input" type="text" id="search-bar">
+                <label class="mdl-textfield__label" for="sample3">搜索...</label>
+            </div>
+
+            <table class="mdl-data-table mdl-js-data-table  mdl-shadow--2dp">
+                <thead>
+                    <tr id="table-head">
+                        <th class="mdl-data-table__cell--non-numeric">id</th>
+                    </tr>
+                </thead>
+                <tbody id="table-body">
+                </tbody>
+            </table>
         </div>
-        <table class="mdl-data-table mdl-js-data-table  mdl-shadow--2dp">
-			<thead>
-                <tr id="table-head">
-                    <th class="mdl-data-table__cell--non-numeric">id</th>
-                </tr>
-			</thead>
-			<tbody id="table-body">
-			</tbody>
-        </table>
-        <br>
-        <table class="mdl-data-table mdl-js-data-table  mdl-shadow--2dp">
-			<thead>
-                <tr id="player-table-head">
-                    <th class="mdl-data-table__cell--non-numeric">time</th>
-                    <th class="mdl-data-table__cell--non-numeric">game_mode</th>
-                    <th class="mdl-data-table__cell--non-numeric">general</th>
-                    <th class="mdl-data-table__cell--non-numeric">player_role</th>
-                    <th class="mdl-data-table__cell--non-numeric">win_or_lose</th>
-                </tr>
-			</thead>
-			<tbody id="player-table-body">
-			</tbody>
-        </table>
+        <div class="mdl-cell mdl-cell--7-col" >
+            <div class="mdl-shadow--2dp"  style="margin-bottom: 1em;">
+                <div style="font-weight: bold; padding: 0.5em; width: 100%; text-align: center; font-size: 1.2em; line-height: 2em;">战功</div>
+                <div id="achievements" style="display: flex; "></div>
+            </div>
+            <table class="mdl-data-table mdl-js-data-table  mdl-shadow--2dp">
+                <thead>
+                    <tr id="player-table-head">
+                        <th class="mdl-data-table__cell--non-numeric">战功</th>
+                    </tr>
+                </thead>
+                <tbody id="player-table-body">
+                </tbody>
+            </table>
+            <br>
+            <table class="mdl-data-table mdl-js-data-table  mdl-shadow--2dp">
+                <thead>
+                    <tr id="achievement-table-head">
+                        <th class="mdl-data-table__cell--non-numeric">战绩</th>
+                    </tr>
+                </thead>
+                <tbody id="achievement-table-body">
+                </tbody>
+            </table>
+        </div>
     </div>
+    <template type="text/html" id="template-achievement">
+        <img class="mdl-list__item-avatar achievement" src="{{img}}"  id="{{id}}">
+        <div class="mdl-tooltip mdl-tooltip--top" for="{{id}}">
+            <p>{{title}}</p>
+            {{desc}}
+            <p style="margin-bottom: 0;">{{firstCompletion}}</p>
+            <div id="{{id}}-progress" class="mdl-progress mdl-js-progress"></div>
+        </div>
+    </template>
     <script src="https://cdn.bootcss.com/systemjs/0.20.13/system.js"></script>
     <script src="https://cdn.bootcss.com/material-design-lite/1.3.0/material.min.js"></script>
     <script src="bundle.js"></script>
