--- a/bin/index.html
+++ b/bin/index.html
@@ -14,17 +14,17 @@
     <link rel="stylesheet" href="https://cdn.bootcss.com/pace/1.0.2/themes/black/pace-theme-loading-bar.min.css" type="text/css" media="all" />
 
     <style>
-        .achievement{
-            margin: 0.4em;
-            background-color: lightgrey;
-        }
-        .mdl-badge[data-badge]:after {
-            top: 0.5em;
-            right: 0.5em;
-        }
-        .mdl-badge {
-            margin-right: inherit;
-        }
+     .achievement{
+         margin: 0.4em;
+         background-color: lightgrey;
+     }
+     .mdl-badge[data-badge]:after {
+         top: 0.5em;
+         right: 0.5em;
+     }
+     .mdl-badge {
+         margin-right: inherit;
+     }
      #achievements .mdl-tabs__panel.is-active {
          display: flex;
      }
@@ -54,11 +54,14 @@
                 <div id="achievements">
                     <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
                         <div class="mdl-tabs__tab-bar">
-                            <a href="#achievements-untagged-panel" class="mdl-tabs__tab">未分类</a>
+                            <a href="#achievements-uncompleted-panel" class="mdl-tabs__tab">未达成</a>
+                            <a href="#achievements-completed-panel" class="mdl-tabs__tab">已达成</a>
                             <a href="#achievements-all-panel" class="mdl-tabs__tab is-active">所有</a>
                         </div>
 
-                        <div class="mdl-tabs__panel" id="achievements-untagged-panel">
+                        <div class="mdl-tabs__panel" id="achievements-uncompleted-panel">
+                        </div>
+                        <div class="mdl-tabs__panel" id="achievements-completed-panel">
                         </div>
                         <div class="mdl-tabs__panel is-active" id="achievements-all-panel">
                         </div>
